agregadas algunas cosas

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -3,6 +3,7 @@ $color-principal: #11324D;
 $color-oscuro: #072035;
 
 $verde-default: #04AA6D;
+$verde-cheto: #1F9167;
 
 $blanco: #F0F0F0;
 $blanco-crem: #E0D8B0;
@@ -10,9 +11,27 @@ $blanco-crem: #E0D8B0;
 
 /* Colores neon/fluo  */
 $cyan: #00ffff;
+//0AC5A8
 $neon : #FFE400;
-$neon-verde:#2ef8a0;
+$neon-verde: #2ef8a0;
 $neon-violeta: #c501e2;
 $neon-rosa: #f82d97;
 $neon-celeste: #01c4e7;
+
+
+
+
+/*COLORES PALETTE WIX*/
+
+$wix-principal: #0C1248;
+$wix-gris: #B2B2B2;
+$wix-secundario: #D03737;
+$wix-blanco: #F7F7F7;
+
+$another-red: #5D0C1D;
+$another-clarito: #E9E6E1;
+$another-verde: #25C998;
+/*Otra palette wix*/
+$claritolindo: #FFE3A9;
+
 
