--- a/css/styles.css
+++ b/css/styles.css
@@ -4,30 +4,38 @@
     font-family: 'Koulen', cursive;
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;      */
+@import url("https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap");
 /* Colores tranquilos */
 /* Colores neon/fluo  */
+/*COLORES PALETTE WIX*/
+/*Otra palette wix*/
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none; }
-  .topnav a.icon {
-    float: right;
+  .navbar .menu {
+    width: 100%;
+    max-height: 0;
+    overflow: hidden; }
+    .navbar .menu .list {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      padding: 0px; }
+      .navbar .menu .list li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%; }
+        .navbar .menu .list li a {
+          width: 100%; }
+  .navbar #toggler:checked ~ .menu {
+    max-height: 100%; }
+  .navbar .burguer .line {
     display: block; } }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative; }
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0; }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left; }
-  .burguer .line {
-    display: block; } }
+@media screen and (max-width: 767px) {
+  #imgMail {
+    display: none; } }
 
 @keyframes blink {
   50% {
@@ -37,31 +45,53 @@
   100% {
     transform: translateY(25px); } }
 
+@keyframes saludar {
+  50% {
+    transform: rotate(25deg); } }
+
 /* Add a black background color to the top navigation */
-.topnav {
+.navbar {
   background-color: #11324D;
-  overflow: hidden;
-  position: fixed;
   display: flex;
-  justify-content: space-between;
-  height: 10%;
-  padding: 15px;
+  flex-wrap: wrap;
   align-items: center;
-  z-index: 99;
-  width: 100%; }
-  .topnav a {
+  justify-content: space-between;
+  width: 100%;
+  padding: 15px;
+  position: fixed;
+  z-index: 99; }
+  .navbar a {
     color: #F0F0F0;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1em;
     text-decoration: none;
-    font-size: 17px; }
-    .topnav a .icon {
-      display: none; }
-    .topnav a:hover {
-      background-color: #F0F0F0;
-      color: #072035; }
-  .topnav .active {
-    background-color: #04AA6D;
+    font-size: 1em; }
+  .navbar .logo {
+    margin-right: 50px;
+    font-size: 3em;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-family: 'Mr De Haviland', cursive; }
+  .navbar .menu {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .navbar .list {
+    margin: 0;
+    list-style: none;
+    display: flex; }
+    .navbar .list li {
+      transition: all 0.5s;
+      padding: 10px;
+      border-radius: 10px; }
+      .navbar .list li:hover {
+        background-color: rgba(255, 228, 0, 0.7);
+        transform: scale(1.1); }
+  .navbar #toggler,
+  .navbar .navbar label {
+    display: none; }
+  .navbar .active {
+    background-color: #1F9167;
     color: white; }
 
 .burguer {
@@ -132,12 +162,16 @@
     color: #F3E9DD;
     animation: bounce 1s ease-in-out infinite alternate; }
 
-#acerca h1 {
-  font-family: 'Poppins', sans-serif; }
+#acerca {
+  padding-top: 71px; }
+  #acerca h1 {
+    font-family: 'Poppins', sans-serif; }
 
-#proyectos h1,
-#proyectos h2 {
-  font-family: 'Poppins', sans-serif; }
+#proyectos {
+  padding-top: 71px; }
+  #proyectos h1,
+  #proyectos h2 {
+    font-family: 'Poppins', sans-serif; }
 
 /*PEN STYLES*/
 .blog-card {
@@ -223,6 +257,81 @@
           bottom: 0;
           z-index: -1; } }
 
+#contacto {
+  padding-top: 71px;
+  background-color: #FCFFE7;
+  /* From uiverse.io by @adamgiebl */ }
+  #contacto h1 {
+    font-family: 'Poppins', sans-serif; }
+  #contacto button {
+    font-size: 1em;
+    background: #072035;
+    color: #F0F0F0;
+    padding: 0.9em;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.2s; }
+    #contacto button span {
+      display: block;
+      margin-left: 0.3em;
+      transition: all 0.3s ease-in-out; }
+    #contacto button svg {
+      display: block;
+      transform-origin: center center;
+      transition: transform 0.3s ease-in-out; }
+    #contacto button:hover .svg-wrapper {
+      animation: fly 0.6s ease-in-out infinite alternate; }
+      #contacto button:hover .svg-wrapper svg {
+        transform: translateX(1.2em) rotate(45deg) scale(1.5); }
+    #contacto button:hover span {
+      transform: translateX(5em); }
+    #contacto button:active {
+      transform: scale(0.95); }
+
+@keyframes fly {
+  from {
+    transform: translateY(0.1em); }
+  to {
+    transform: translateY(-0.1em); } }
+
+#imgMail {
+  position: relative;
+  overflow: hidden; }
+  #imgMail #avioncito {
+    position: absolute;
+    width: 90%;
+    top: -10%;
+    animation: saludar 3s infinite linear; }
+  #imgMail #rafiki {
+    position: absolute;
+    width: 90%; }
+
+footer {
+  background-color: #11324D;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  footer .divisor {
+    text-decoration: none;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    color: #F0F0F0; }
+    footer .divisor span {
+      color: #11324D;
+      font-weight: 500; }
+    footer .divisor i {
+      padding: 15px;
+      font-size: 3em; }
+    footer .divisor:hover {
+      background-color: #F0F0F0;
+      color: #072035;
+      border-radius: 5px; }
+
 * {
   margin: 0;
   padding: 0;
@@ -237,4 +346,19 @@ body {
   font-family: Helvetica, sans-serif;
   color: #072035;
   background-color: #E0D8B0;
-  background-color: #F0F0F0; }
+  background-color: #FCFFE7; }
+
+#tecnologias {
+  padding-top: 71px; }
+  #tecnologias h1 {
+    font-family: 'Poppins', sans-serif; }
+  #tecnologias .row .col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+
+.onView {
+  background-color: #FFE400; }
+  .onView a {
+    color: #072035; }
