--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,69 +1,90 @@
 /* Add a black background color to the top navigation */
 
 
+.navbar {
+  background-color: $color-principal;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 15px;
+  position: fixed;
+  z-index: 99;
+  a {
+    color: $blanco;
+    text-align: center;
+    padding: 1em;
+    text-decoration: none;
+    font-size: 1em;
+  }
 
-.topnav {
-    background-color: $color-principal;
-    overflow: hidden;
-    position: fixed;
+  .logo {
+    margin-right: 50px;
+    font-size: 3em;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-family: 'Mr De Haviland', cursive;
+  }
+
+  .menu {
     display: flex;
-    justify-content: space-between;
-    height: 10%;
-    padding: 15px;
     align-items: center;
-    z-index: 99;
-    width: 100%;
-  
-    a {
-      color: $blanco;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-  
-      .icon {
-        display: none;
+    justify-content: center;
+  }
+
+  .list {
+    margin: 0;
+    list-style: none;
+    display: flex;
+
+    li {
+      transition: all 0.5s;
+      padding: 10px;
+      border-radius: 10px;
+      &:hover{
+        background-color: rgba($color: $neon, $alpha: 0.7);      
+        transform: scale(1.1);
       }
-  
-      &:hover {
-        background-color: $blanco;
-        color: $color-oscuro;
-      }
-    }
-  
-    .active {
-      background-color: $verde-default;
-      color: white;
     }
   }
 
-  
-  .burguer {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-  
-    .line {
-      width: 40px;
-      height: 4px;
-      background-color: white;
-      margin-block: 10px;
-      border-radius: 5px;
-      transition: transform .5s;
-    }
-  
-    &:hover .line:nth-child(1) {
-      transform: translateY(14px) rotate(45deg);
-    }
-  
-    &:hover .line:nth-child(2) {
-      opacity: 0;
-    }
-  
-    &:hover .line:nth-child(3) {
-      transform: translateY(-14px) rotate(-45deg);
-    }
+  #toggler,
+  .navbar label {
+    display: none;
   }
-  
-  
+
+  .active {
+    background-color: $verde-cheto;
+    color: white;
+  }
+
+}
+
+.burguer {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+
+  .line {
+    width: 40px;
+    height: 4px;
+    background-color: white;
+    margin-block: 10px;
+    border-radius: 5px;
+    transition: transform .5s;
+  }
+
+  &:hover .line:nth-child(1) {
+    transform: translateY(14px) rotate(45deg);
+  }
+
+  &:hover .line:nth-child(2) {
+    opacity: 0;
+  }
+
+  &:hover .line:nth-child(3) {
+    transform: translateY(-14px) rotate(-45deg);
+  }
+}
