--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,7 @@
     font-family: 'Roboto', sans-serif;      */
 
 @import url('https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
 $blanco-vintage: #FCFFE7;
 $blanco-rosado: #F8ECD1;
