--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,13 @@
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;      */
 @import url("https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap");
 /* Colores tranquilos */
 /* Colores neon/fluo  */
 /*COLORES PALETTE WIX*/
 /*Otra palette wix*/
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 730px) {
   .navbar .menu {
     width: 100%;
     max-height: 0;
@@ -49,7 +50,6 @@
   50% {
     transform: rotate(25deg); } }
 
-/* Add a black background color to the top navigation */
 .navbar {
   background-color: #11324D;
   display: flex;
@@ -67,11 +67,10 @@
     text-decoration: none;
     font-size: 1em; }
   .navbar .logo {
-    margin-right: 50px;
     font-size: 3em;
     padding-top: 0;
     padding-bottom: 0;
-    font-family: 'Mr De Haviland', cursive; }
+    font-family: 'Playfair Display', serif; }
   .navbar .menu {
     display: flex;
     align-items: center;
